--- a/index.html
+++ b/index.html
@@ -17,12 +17,11 @@
     <link rel="stylesheet" href="02event.css">
     <link rel="stylesheet" href="03party-cards.css">
     <link rel="stylesheet" href="04intro.css">
-    <link rel="stylesheet" href="05reels.css">
     <link rel="stylesheet" href="06host.css">
     <link rel="stylesheet" href="07notice.css">
     <link rel="stylesheet" href="10stickybar.css">
-    <link rel="stylesheet" href="slide2.css">
-    <link rel="stylesheet" href="hotclip.css">
+    <link rel="stylesheet" href="05reels.css">
+    <link rel="stylesheet" href="05hotclip.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
@@ -151,7 +150,7 @@
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="slide2.js"></script>
+    <script src="05reels.js"></script>
 
 
     <!-- ======================================================= -->
@@ -194,7 +193,7 @@
     <!-- <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script> -->
 
     <!-- [중요] 핫클립용 JS 파일을 새로 만들거나 인라인 스크립트로 추가합니다. -->
-    <script src="hotclip.js"></script>
+    <script src="05hotclip.js"></script>
 
     <!-- 🎥 [2] 소개 섹션 -->
     <section class="intro-questions">
