--- a/index.html
+++ b/index.html
@@ -29,14 +29,19 @@
 </head>
 <body>
     <!-- 🖥️ [1] Hero 섹션 -->
-    <section id="hero">
+<section id="hero">
         <div class="video-wrapper" id="videoWrapper">
-            <video id="heroVideo" class="main-video" preload="none" playsinline muted poster="/img/thumb.png" controlsList="nodownload">
-                <source src="video/메인영상.mp4">
-            </video>
+            <!-- [변경] iframe을 직접 삽입하고, 고유 ID(예: hero-player)를 부여합니다. -->
+            <iframe 
+                id="hero-player" 
+                src="https://www.youtube.com/embed/t9oX38iS5WU?enablejsapi=1&autoplay=0&controls=0&rel=0&showinfo=0&modestbranding=1&loop=1&playlist=t9oX38iS5WU&playsinline=1&mute=1&fs=0&iv_load_policy=3" 
+                frameborder="0" 
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen>
+            </iframe>
         </div>
 
-        <!-- ✅ 처음에 보이는 텍스트/버튼 오버레이 -->
+        <!-- ✅ 처음에 보이는 텍스트/버튼 오버레이 (이 부분은 변경 없음) -->
         <div class="main-video-overlay" id="heroOverlay">
             <div class="hero-box">
                 <h1 class="hero-text boingInUp delay-0">홍대에 숨은 도파민 파티가 있다고?</h1>
@@ -50,6 +55,8 @@
             </div>
         </div>
     </section>
+
+    <!-- 3. JS 파일을 연결합니다. -->
     <script src="01hero.js"></script>
 
 
@@ -364,6 +371,70 @@
         -->
     <script src="10stickybar.js"></script>
     <script src="03party-cards.js"></script>
+
+        <!-- Swiper 라이브러리는 필요하므로 그대로 둡니다. -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    
+    <!-- 1. 통합 매니저 스크립트 로드 (기존 hero, reels, hotclip.js는 모두 삭제) -->
+    <script src="YouTubePlayerManager.js"></script>
+
+    <!-- 2. 각 컴포넌트 초기화 스크립트 -->
+    <script>
+        // DOM이 준비되면 초기화를 시작합니다.
+        document.addEventListener('DOMContentLoaded', function() {
+
+            // Hero 단일 플레이어 초기화
+            YouTubePlayerManager.init({
+                selector: '#videoWrapper', // 플레이어가 삽입될 div의 ID
+                type: 'hero',
+                trigger: '#watchVideoBtn', // 재생을 시작할 버튼의 선택자
+                overlay: '#heroOverlay'    // 숨겨질 오버레이의 선택자
+            });
+
+            // Reels 스와이퍼 초기화
+            YouTubePlayerManager.init({
+                selector: '.mySwiper', // Swiper 컨테이너의 클래스명
+                type: 'swiper',
+                pagination: '.reels-swiper-pagination', // 기존 HTML 클래스명
+                navigation: {
+                    nextEl: '.reels-swiper-button-next', // 기존 HTML 클래스명
+                    prevEl: '.reels-swiper-button-prev'  // 기존 HTML 클래스명
+                },
+                options: { // Swiper에 전달할 고유 옵션
+                    slidesPerView: 1.3,
+                    centeredSlides: true,
+                    spaceBetween: -15,
+                    loop: false,
+                    breakpoints: {
+                        768: { slidesPerView: 2, spaceBetween: 40 },
+                        1024: { slidesPerView: 3, spaceBetween: 50 },
+                    }
+                }
+            });
+
+            // Hotclip 스와이퍼 초기화
+            YouTubePlayerManager.init({
+                selector: '.hotclipSwiper', // Swiper 컨테이너의 클래스명
+                type: 'swiper',
+                pagination: '.hotclip-swiper-pagination', // 기존 HTML 클래스명
+                navigation: {
+                    nextEl: '.hotclip-swiper-button-next', // 기존 HTML 클래스명
+                    prevEl: '.hotclip-swiper-button-prev'  // 기존 HTML 클래스명
+                },
+                options: { // Swiper에 전달할 고유 옵션
+                    slidesPerView: 1.3,
+                    centeredSlides: true,
+                    spaceBetween: -15,
+                    loop: false,
+                    breakpoints: {
+                        768: { slidesPerView: 2, spaceBetween: 40 },
+                        1024: { slidesPerView: 3, spaceBetween: 50 },
+                    }
+                }
+            });
+
+        });
+    </script>
 </body>
 </html>
 
