--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <!-- [변경] iframe을 직접 삽입하고, 고유 ID(예: hero-player)를 부여합니다. -->
             <iframe 
                 id="hero-player" 
-                src="https://www.youtube.com/embed/t9oX38iS5WU?enablejsapi=1&autoplay=0&controls=0&rel=0&showinfo=0&modestbranding=1&loop=1&playlist=t9oX38iS5WU&playsinline=1&mute=1&fs=0&iv_load_policy=3" 
+                src="https://www.youtube.com/embed/t9oX38iS5WU?enablejsapi=1&autoplay=0&controls=0&rel=0&showinfo=0&modestbranding=1&loop=0&playlist=t9oX38iS5WU&playsinline=1&mute=0&fs=0&iv_load_policy=3" 
                 frameborder="0" 
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen>
@@ -71,7 +71,7 @@
         <div class="event-section-box1">
             <div class="event-section-title">1. 사전신청 이벤트</div>
             <div class="event-section-text">
-                파티 시작 하루 이상 미리 신청 시!<br>메인 파티, 애프터 파티 ‘각각’ 5천원 할인!!
+                파티 시작 하루 이상 미리 신청 시!<br>'메인 파티' 5천원 할인!!
             </div>
         </div>
         <div class="event-section-box2">
@@ -81,7 +81,13 @@
             </div>
         </div>
         <div class="event-section-box3">
-            <div class="event-section-box3-text">즉, 이벤트 두개 모두 참여 시 <br><span class="discount">총 1.5만원</span> 할인!!</div>
+            <div class="event-section-box3-text">즉, 이벤트 두개 모두 참여 시 <br><span class="discount">총 '만원'</span> 할인!!</div>
+        </div>
+        <div class="event-section-box4">
+            <div class="event-section-title-box4">3. 재오픈기념 1+1 이벤트!!</div>
+            <div class="event-section-text-box4">
+                🗓️<span class="event-day"> 7월 19일</span> 까지만!! <br> 한명이 파티 예약하면? 동반 1인 무료 초대 이벤트!
+            </div>
         </div>
     </section>
 
@@ -161,7 +167,7 @@
         <div class="hotclip-section">
             <div class="hotclip-header">
                 <div class="hotclip-subtitle">주간 BEST</div>
-                <div class="hotclip-title">핫클립</div>
+                <div class="hotclip-title"><span class="hot">핫</span>클립</div>
             </div>
         </div>
 
