--- a/index.html
+++ b/index.html
@@ -122,30 +122,59 @@
         <!-- 4. Swiper HTML 구조 -->
         <div class="swiper mySwiper">
             <div class="swiper-wrapper">
-                <!-- 슬라이드 1 -->
                 <div class="swiper-slide shorts-video-size">
                     <div class="iframe-container">
-                        <!-- 여기에 첫 번째 쇼츠 iframe을 넣습니다. VIDEO_ID를 교체하세요. -->
-                        <iframe id="player1" width="560" height="315" src="https://www.youtube.com/embed/t9oX38iS5WU?enablejsapi=1&origin=https://grl.netlify.app" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <iframe id="player11" width="560" height="315" src="https://www.youtube.com/embed/g_8kPABmwlg?enablejsapi=1&origin=https://grl.netlify.app" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
                 </div>
-                <!-- 슬라이드 2 -->
                 <div class="swiper-slide shorts-video-size">
                     <div class="iframe-container">
-                        <!-- 여기에 두 번째 쇼츠 iframe을 넣습니다. VIDEO_ID를 교체하세요. -->
-                        <iframe id="player2" width="560" height="315" src="https://www.youtube.com/embed/f0zWOIc54Sc?enablejsapi=1&origin=https://grl.netlify.app" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <iframe id="player10" width="560" height="315" src="https://www.youtube.com/embed/gigxWf5YveU?enablejsapi=1&origin=https://grl.netlify.app" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
                 </div>
-                <!-- 슬라이드 3 -->
+                <div class="swiper-slide shorts-video-size">
+                    <div class="iframe-container">
+                        <iframe id="player9" width="560" height="315" src="https://www.youtube.com/embed/EMI106PDTdU?enablejsapi=1&origin=https://grl.netlify.app" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </div>
+                </div>
+                <div class="swiper-slide shorts-video-size">
+                    <div class="iframe-container">
+                        <iframe id="player8" width="560" height="315" src="https://www.youtube.com/embed/NSVD5zG7Xhk?enablejsapi=1&origin=https://grl.netlify.app" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </div>
+                </div>
+                <div class="swiper-slide shorts-video-size">
+                    <div class="iframe-container">
+                        <iframe id="player7" width="560" height="315" src="https://www.youtube.com/embed/XoYq7mnJfRg?enablejsapi=1&origin=https://grl.netlify.app" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </div>
+                </div>
+                <div class="swiper-slide shorts-video-size">
+                    <div class="iframe-container">
+                        <iframe id="player6" width="560" height="315" src="https://www.youtube.com/embed/AUzed14z4I8?enablejsapi=1&origin=https://grl.netlify.app" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </div>
+                </div>
+                <div class="swiper-slide shorts-video-size">
+                    <div class="iframe-container">
+                        <iframe id="player5" width="560" height="315" src="https://www.youtube.com/embed/D7pH-C_lkxw?enablejsapi=1&origin=https://grl.netlify.app" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </div>
+                </div>
+                <div class="swiper-slide shorts-video-size">
+                    <div class="iframe-container">
+                        <iframe id="player4" width="560" height="315" src="https://www.youtube.com/embed/i69GzWV4KUA?enablejsapi=1&origin=https://grl.netlify.app" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </div>
+                </div>
                 <div class="swiper-slide shorts-video-size">
                     <div class="iframe-container">
                         <iframe id="player3" width="560" height="315" src="https://www.youtube.com/embed/o95ixi5cz1g?enablejsapi=1&origin=https://grl.netlify.app" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
                 </div>
-                <!-- 슬라이드 4 -->
                 <div class="swiper-slide shorts-video-size">
                     <div class="iframe-container">
-                        <iframe id="player4" width="560" height="315" src="https://www.youtube.com/embed/t9oX38iS5WU?enablejsapi=1&origin=https://grl.netlify.app" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <iframe id="player2" width="560" height="315" src="https://www.youtube.com/embed/f0zWOIc54Sc?enablejsapi=1&origin=https://grl.netlify.app" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </div>
+                </div>
+                <div class="swiper-slide shorts-video-size">
+                    <div class="iframe-container">
+                        <iframe id="player1" width="560" height="315" src="https://www.youtube.com/embed/PTTFZymoq-c?enablejsapi=1&origin=https://grl.netlify.app" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
                 </div>
                 <!-- 슬라이드를 더 추가하려면 위 reels-swiper-slide 블록을 복사해서 붙여넣으세요. -->
@@ -174,19 +203,16 @@
         <!-- Swiper HTML 구조 (클래스명 변경) -->
         <div class="swiper hotclipSwiper">
             <div class="swiper-wrapper">
-                <!-- 핫클립 슬라이드 1 (새로운 영상과 ID로 교체) -->
                 <div class="swiper-slide hotclip-video-size">
                     <div class="iframe-container">
-                        <iframe id="hotclip-player1" width="560" height="315" src="https://www.youtube.com/embed/f0zWOIc54Sc?enablejsapi=1&origin=https://grl.netlify.app" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <iframe id="hotclip-player2" width="560" height="315" src="https://www.youtube.com/embed/_YBX4bugzMA?enablejsapi=1&origin=https://grl.netlify.app" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
                 </div>
-                <!-- 핫클립 슬라이드 2 -->
                 <div class="swiper-slide hotclip-video-size">
                     <div class="iframe-container">
-                        <iframe id="hotclip-player2" width="560" height="315" src="https://www.youtube.com/embed/o95ixi5cz1g?enablejsapi=1&origin=https://grl.netlify.app" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <iframe id="hotclip-player1" width="560" height="315" src="https://www.youtube.com/embed/5c-UXzeUySo?enablejsapi=1&origin=https://grl.netlify.app" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
                 </div>
-                <!-- ... 필요에 따라 슬라이드를 더 추가 ... -->
             </div>
             <!-- 좌/우 버튼 (클래스명 변경) -->
             <div class="hotclip-swiper-button-next"></div>
